backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: foodgram
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: django
        image: santino9/foodgram-backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static-volume
          mountPath: /app/static
        - name: media-volume
          mountPath: /app/media
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 8000
#          initialDelaySeconds: 30
#          periodSeconds: 10
#        readinessProbe:
#            httpGet:
#              path: /
#              port: 8000
#            initialDelaySeconds: 5
#            periodSeconds: 5
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume-pvc
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume-pvc
