nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: foodgram
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: frontend-static
          mountPath: /usr/share/nginx/html
        - name: static-volume
          mountPath: /app/static
        - name: media-volume
          mountPath: /app/media
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: default.conf
      - name: frontend-static
        persistentVolumeClaim:
          claimName: frontend-static-pvc
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-volume-pvc
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-volume-pvc
