db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: foodgram
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
