nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: foodgram
spec:
  type: LoadBalancer   # или NodePort, если нет LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
