ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodgram-ingress
  namespace: foodgram
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - foodgram.local
    secretName: foodgram-tls
  rules:
  - host: foodgram.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
